@@ -65,9 +65,22 @@ class PluginFunctionHtmlSelectDateTests extends PHPUnit_Framework_TestCase {
 <option value="2010">2010</option>
 <option value="2011" selected="selected">2011</option>',
         'default' => '<option value="2011" selected="selected">2011</option>',
+        'none' => '<option value="2011">2011</option>',
     );
     
     protected $months = array(
+        'none' => '<option value="01">January</option>
+<option value="02">February</option>
+<option value="03">March</option>
+<option value="04">April</option>
+<option value="05">May</option>
+<option value="06">June</option>
+<option value="07">July</option>
+<option value="08">August</option>
+<option value="09">September</option>
+<option value="10">October</option>
+<option value="11">November</option>
+<option value="12">December</option>',
         'default' => '<option value="01">January</option>
 <option value="02" selected="selected">February</option>
 <option value="03">March</option>
@@ -119,6 +132,37 @@ class PluginFunctionHtmlSelectDateTests extends PHPUnit_Framework_TestCase {
     );
     
     protected $days = array(
+        'none' => '<option value="1">01</option>
+<option value="2">02</option>
+<option value="3">03</option>
+<option value="4">04</option>
+<option value="5">05</option>
+<option value="6">06</option>
+<option value="7">07</option>
+<option value="8">08</option>
+<option value="9">09</option>
+<option value="10">10</option>
+<option value="11">11</option>
+<option value="12">12</option>
+<option value="13">13</option>
+<option value="14">14</option>
+<option value="15">15</option>
+<option value="16">16</option>
+<option value="17">17</option>
+<option value="18">18</option>
+<option value="19">19</option>
+<option value="20">20</option>
+<option value="21">21</option>
+<option value="22">22</option>
+<option value="23">23</option>
+<option value="24">24</option>
+<option value="25">25</option>
+<option value="26">26</option>
+<option value="27">27</option>
+<option value="28">28</option>
+<option value="29">29</option>
+<option value="30">30</option>
+<option value="31">31</option>',
         'default' => '<option value="1">01</option>
 <option value="2">02</option>
 <option value="3">03</option>
@@ -339,6 +383,34 @@ class PluginFunctionHtmlSelectDateTests extends PHPUnit_Framework_TestCase {
             .$n.'<select name="Date_Day">'.$n.'<option value="">day</option>'.$n. $this->days['default'] .$n.'</select>'
             .$n.'<select name="Date_Year">'.$n.'<option value="">year</option>'.$n. $this->years['default'] .$n.'</select>';
         $tpl = $this->smarty->createTemplate('eval:{html_select_date time='. $this->now .' year_empty="year" month_empty="month" day_empty="day"}');
+        $this->assertEquals($result, $this->smarty->fetch($tpl));
+    }
+    
+    public function testEmptyUnset()
+    {
+        $n = "\n";
+        $result = '<select name="Date_Month">'.$n.'<option value=""></option>'.$n. $this->months['none'] .$n.'</select>'
+            .$n.'<select name="Date_Day">'.$n.'<option value=""></option>'.$n. $this->days['none'] .$n.'</select>'
+            .$n.'<select name="Date_Year">'.$n.'<option value=""></option>'.$n. $this->years['none'] .$n.'</select>';
+        $tpl = $this->smarty->createTemplate('eval:{html_select_date time=null all_empty=""}');
+        $this->assertEquals($result, $this->smarty->fetch($tpl));
+        
+        $result = '<select name="Date_Month">'.$n.'<option value="">all</option>'.$n. $this->months['none'] .$n.'</select>'
+            .$n.'<select name="Date_Day">'.$n.'<option value="">all</option>'.$n. $this->days['none'] .$n.'</select>'
+            .$n.'<select name="Date_Year">'.$n.'<option value="">all</option>'.$n. $this->years['none'] .$n.'</select>';
+        $tpl = $this->smarty->createTemplate('eval:{html_select_date time=null all_empty="all"}');
+        $this->assertEquals($result, $this->smarty->fetch($tpl));
+        
+        $result = '<select name="Date_Month">'.$n. $this->months['none'] .$n.'</select>'
+            .$n.'<select name="Date_Day">'.$n. $this->days['none'] .$n.'</select>'
+            .$n.'<select name="Date_Year">'.$n.'<option value=""></option>'.$n. $this->years['none'] .$n.'</select>';
+        $tpl = $this->smarty->createTemplate('eval:{html_select_date time=null year_empty=""}');
+        $this->assertEquals($result, $this->smarty->fetch($tpl));
+        
+        $result = '<select name="Date_Month">'.$n.'<option value="">month</option>'.$n. $this->months['none'] .$n.'</select>'
+            .$n.'<select name="Date_Day">'.$n.'<option value="">day</option>'.$n. $this->days['none'] .$n.'</select>'
+            .$n.'<select name="Date_Year">'.$n.'<option value="">year</option>'.$n. $this->years['none'] .$n.'</select>';
+        $tpl = $this->smarty->createTemplate('eval:{html_select_date time=null year_empty="year" month_empty="month" day_empty="day"}');
         $this->assertEquals($result, $this->smarty->fetch($tpl));
     }
     
